--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "GitHub Action for Importing Code-signing Certificates into a Keychain",
   "main": "lib/main.js",
   "engines": {
-    "node": ">=16"
+    "node": ">=20"
   },
   "scripts": {
     "build": "tsc",
@@ -30,6 +30,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
+    "@vercel/ncc": "^0.38.1",
     "tmp": "^0.2.1"
   },
   "devDependencies": {
@@ -38,7 +39,6 @@
     "@types/tmp": "^0.2.4",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
-    "@zeit/ncc": "^0.20.5",
     "eslint": "^8.49.0",
     "eslint-plugin-github": "^4.10.0",
     "eslint-plugin-jest": "^27.4.0",
